Fix icon visibility issue in Safari 18

--- a/src/co/common/icon/index.module.styl
+++ b/src/co/common/icon/index.module.styl
@@ -1,11 +1,9 @@
 .icon {
 	contain: strict
-	content-visibility: auto
 	display: inline-block
 
 	svg {
 		contain: strict
-    	content-visibility: auto
 		display:block
 		fill: currentColor
 	}
